--- a/index.html
+++ b/index.html
@@ -625,6 +625,13 @@ body {
     position: relative;
 }
     </style>
+
+	<head>
+    <title>Arteya</title>
+    <meta name="google-site-verification" content="YOUR_CODE_HERE" />
+    <!-- your other code here -->
+	</head>
+
 </head>
 <body>
 <!-- Star Container -->
@@ -947,4 +954,5 @@ function createStars() {
 document.addEventListener('DOMContentLoaded', createStars);
 </script>
 </body>
+
 </html>
