--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@ body {
 
 	<head>
     <title>Arteya</title>
-    <meta name="google-site-verification" content="YOUR_CODE_HERE" />
+    <meta name="google-site-verification" content="Yb1PwovuJ0bOzioyYglFBDfvn_bSu91-65t71WlfYv0" />
     <!-- your other code here -->
 	</head>
 
@@ -956,3 +956,4 @@ document.addEventListener('DOMContentLoaded', createStars);
 </body>
 
 </html>
+
