--- a/index.html
+++ b/index.html
@@ -627,8 +627,7 @@ body {
     </style>
 
 	<head>
-    <title>Arteya</title>
-    <meta name="google-site-verification" content="Yb1PwovuJ0bOzioyYglFBDfvn_bSu91-65t71WlfYv0" />
+    <title>Arteya</title><meta name="google-site-verification" content="Yb1PwovuJ0bOzioyYglFBDfvn_bSu91-65t71WlfYv0" />
     <!-- your other code here -->
 	</head>
 
@@ -956,5 +955,6 @@ document.addEventListener('DOMContentLoaded', createStars);
 </body>
 
 </html>
+
 
 
