--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arteya - Where Your Art Is Born</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	<meta name="google-site-verification" content="Yb1PwovuJ0bOzioyYglFBDfvn_bSu91-65t71WlfYv0" />
+    <title>Arteya</title>
+    <!-- rest of your code -->
+
     <style>
         :root {
             --pastel-green: #a8e6cf;
@@ -626,12 +630,7 @@ body {
 }
     </style>
 
-	<head>
-    <title>Arteya</title><meta name="google-site-verification" content="Yb1PwovuJ0bOzioyYglFBDfvn_bSu91-65t71WlfYv0" />
-    <!-- your other code here -->
-	</head>
-
-</head>
+  
 <body>
 <!-- Star Container -->
 <div class="stars-container" id="starsContainer"></div>
@@ -955,6 +954,7 @@ document.addEventListener('DOMContentLoaded', createStars);
 </body>
 
 </html>
+
 
 
 
